[package]
name = "slipstream-proxy-aggregator"
version = "1.0.0"
edition = "2021"
authors = ["imanoracle <imanoracle@users.noreply.github.com>"]

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
clap = { version = "4.5.3", features = ["derive"] }
crossterm = "0.27.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
